[gd_scene load_steps=4 format=2]

[ext_resource path="res://asset/TAC cards_1/button/button_1-8.png" type="Texture" id=1]
[ext_resource path="res://scene/tabletop/hand/UnfoldButton.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100.697, 100.322 )

[node name="UnfoldButton" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.101161, 0.101161 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 95, 540, 1985, 1980 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 100, 100 )
shape = SubResource( 1 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
